test/expected/declare_ac3i.out
declare x as array const 3 of int
        ^
9: error: "const" arrays are illegal outside of parameters
